# redsl

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README_EN.md  SUMD.md  SUMR.md  TODO.md  Taskfile.yml  app.doql.css  docker-compose.yml  goal.yaml  planfile.yaml  prefact.yaml  project.sh  project_toon.yaml  pyproject.toml  pyqual.yaml  pyqual_report.yaml  redsl_refactor_report.md  redsl_refactor_report.toon.yaml  redsl_scan_report.md  requirements.txt  sumd.json  test_direct_refactor.py
.taskill/: state.json
app/: __init__.py  config.py  orchestrator.py
app/analyzers/: __init__.py  quality_visitor.py
app/dsl/: engine.py
app/llm/: __init__.py
app/refactors/: __init__.py  direct.py
archive/legacy_scripts/: apply_semcod_refactor.py  batch_quality_refactor.py  batch_refactor_semcod.py  debug_decisions.py  debug_llm_config.py  hybrid_llm_refactor.py  hybrid_quality_refactor.py
config/: default_rules.yaml
docs/: API.md  CONFIG_CHEATSHEET.md  CONFIG_MIGRATION.md  CONFIG_STANDARD.md  README.md  algitex-progresywna-algorytmizacja.md  ats-benchmark.md  autonomous_pr_example.md  clickmd-markdown-terminal.md  code2docs-automatyczna-dokumentacja.md  code2llm-analiza-przeplywu-kodu.md  code2logic-analiza-nlp.md  cost-kalkulator-kosztow-ai.md  domd-walidacja-komend-markdown.md  ekosystem-semcod-przeglad.md  goal-automatyczny-git-push.md  heal-zdrowie-wellness.md  llx-routing-modeli-llm.md  metrun-profilowanie-wydajnosci.md  nfo-automatyczne-logowanie-funkcji.md  pactfix-bash-analyzer.md  pfix-self-healing-python.md  planfile-automatyzacja-sdlc.md  prefact-linter-llm-aware.md  prellm-preprocessing-llm.md  proxym-proxy-ai.md  pyqual-quality-gates.md  qualbench-ci-dla-kodu-ai.md  redup-detekcja-duplikacji.md  regix-indeks-regresji.md  toonic-format-toon.md  vallm-walidacja-kodu-llm.md  weekly-analizator-jakosci.md  zautomatyzowany-biznes-semcod.md
examples/01-basic-analysis/: README.md  main.py
examples/02-custom-rules/: README.md  main.py  team_rules.yaml
examples/03-full-pipeline/: README.md  main.py
examples/04-memory-learning/: README.md  main.py
examples/05-api-integration/: main.py
examples/06-awareness/: README.md
examples/07-pyqual/: README.md
project/: README.md  REFACTORING_SUMMARY_2026-04-08.md  REFACTOR_PLAN_ORCHESTRATOR.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
project_test/: README.md  analysis.toon.yaml  context.md  evolution.toon.yaml  index.html  map.toon.yaml  project.toon.yaml  prompt.txt
redsl/: __init__.py  __main__.py  api.py  cli.py  config.py  consciousness_loop.py  formatters.py  history.py  main.py  orchestrator.py  pyqual_report.yaml
redsl/analyzers/: __init__.py  analyzer.py  metrics.py  parsers.py  python_analyzer.py  quality_visitor.py  radon_analyzer.py  redup_bridge.py  resolver.py  sumd_bridge.py  toon_analyzer.py  utils.py
redsl/api/: __init__.py  cqrs_routes.py  debug_routes.py  models.py  openapi.yaml  scan_routes.py
redsl/autonomy/: __init__.py  intent.py  review.py  scheduler.py
redsl/awareness/: __init__.py
redsl/bridges/: __init__.py  base.py  redeploy_bridge.py
redsl/cli/: __init__.py  batch.py  config.py  debug.py  events.py  models.py  planfile.py  pyqual.py  refactor.py  scan.py  workflow.py
redsl/commands/: _indent_fixers.py  _scan_report.py  autonomy_pr.py  batch.py  cli_autonomy.py  doctor.py  doctor_data.py  doctor_detectors.py  doctor_fixers.py  doctor_fstring_fixers.py  doctor_helpers.py  doctor_indent_fixers.py  github_source.py  hybrid.py  plan_sync.py  planfile_bridge.py  pyqual.py  scan.py  sumr_planfile.py  sumr_planfile.py.bak
redsl/config_standard/: __init__.py  agent_bridge.py  applier.py  catalog.py  core.py  llm_policy.py  models.py  nlp_handlers.py  paths.py  profiles.py  proposals.py  secrets.py  security.py  store.py
redsl/defaults/: workflow.yaml
redsl/diagnostics/: perf_bridge.py
redsl/dsl/: __init__.py  engine.py
redsl/examples/: awareness.py  badge.py  pr_bot.py
redsl/execution/: backup_manager.py  cycle.py  decision.py  decision.py.bak  deploy_detector.py  executor.py  planfile_runner.py  planfile_updater.py  project_scanner.py  pyqual_validators.py  reporter.py  test_validation.py  validation.py  workflow.py
redsl/formatters/: __init__.py  cycle.py  pyqual_report.yaml
redsl/llm/: __init__.py  gate.py  llx_router.py  selection.py
redsl/memory/: __init__.py
redsl/project/: README.md  analysis.toon.yaml  context.md  evolution.toon.yaml
redsl/refactors/: __init__.py  ast_transformers.py  body_restorer.py  direct.py  engine.py  models.py  prompts.py
redsl/validation/: __init__.py  pyqual_bridge.py  regix_bridge.py  vallm_bridge.py
redsl_output/: hybrid_refactor_results.json  pyqual_report.json  redsl_batch_hybrid_report.md
test_sample_project/: TODO.md  hybrid_llm_refactor_results_direct.json  hybrid_llm_refactor_results_llm.json  planfile.yaml  prefact.yaml  sample.py
tests/: conftest.py  test_agent_bridge.py  test_analyzer.py  test_api.py  test_autonomy.py  test_batch_pyqual.py  test_cli_config.py  test_cli_refactor.py  test_config_loading.py  test_config_standard.py  test_direct_bugs_and_bridges.py  test_direct_refactor.py  test_doctor.py  test_dsl_engine.py  test_e2e.py  test_examples.py  test_github_sync.py  test_integration.py  test_llm_execution.py  test_memory.py  test_pipeline.py  test_planfile_sync.py  test_scan.py  test_sumd_bridge.py  test_test_validation.py  test_tier3.py
www/: .gitignore  .htaccess  Dockerfile  Makefile  README-PLESK.md  README.md  README_CONFIG.md  README_NDA.md  README_PROPozycje.md  app.js  bootstrap.php  composer.json  config-api.php  config-editor.php  docker-compose.yml  email-notifications.php  index.php  install-plesk.sh  nda-form.php  nda-wzor.php  panel.css  phpunit.xml  polityka-prywatnosci.php  proposals.php  propozycje.php  regulamin.php  smoke-test.sh  style.css  test-plesk.sh  tree.sh
(+98 files in other folders)
